# Soui

./: README.md  pyproject.toml  setup.cfg  setup.py
Soui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
soui/: __init__.py  soui.py
src/Soui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/soui/: __init__.py  soui.py
