[pylama]
linters = mccabe,pep8,pyflakes,import_order
ignore = D203

[pylama:pep8]
max_line_length = 100

[tool:pytest]
addopts = --cov=soui --cov-report term-missing -vs --pylama
json_report = report.json
jsonapi = true

[coverage:run]
include =
  soui/*

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        soui = soui.soui:main
